[package]
name = "rust-raytracer"
version = "0.1.0"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>", "Leo Mehr <leomehr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.0"
cgmath = "0.17.0"
rand = "0.7.3"
obj = "0.9.1"
log = "0.4.8"
env_logger = "0.7.1"
time = "0.2.7"
threadpool = "1.7.1"
